--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_core: ^1.20.0
   get: 
   cloud_firestore: ^3.4.8
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
