--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,12 +13,13 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.20.0
+  firebase_core: ^1.24.0
   get: 
   cloud_firestore: ^3.4.8
   google_fonts: ^3.0.1
   firebase_storage: ^10.3.8
   cached_network_image:
+  flutter_zoom_drawer:
 
 dev_dependencies:
   flutter_test:
